further improved the styling, fixed home bar overlap on ios, added no internet connection screen with shortcut to settings

--- a/src/theme/components/_ionic.scss
+++ b/src/theme/components/_ionic.scss
@@ -3,4 +3,8 @@
     &__toolbar {
         padding: 0 16px;
     }
+
+    &__tabs {
+        background: var(--ion-background-color);
+    }
 }
