--- a/src/theme/general/_globals.scss
+++ b/src/theme/general/_globals.scss
@@ -15,6 +15,10 @@ ion-tab-bar {
     --background: var(--ion-background-color);
 }
 
+ion-tab-bar {
+    padding-bottom: env(safe-area-inset-bottom);
+}
+
 ion-button {
     margin: 0;
 }
